--- a/css.css
+++ b/css.css
@@ -110,11 +110,25 @@ background-color: #48d83189;
 position: relative;
     bottom:-30px;
     right:-90px;
-z-index:9999;
+z-index:99;
 border-radius: 10px;
 font-family: 宋体;
 font-size: 0.5px;
 font-weight: 900;
 color: #000;
 
+  }
+  #timer{
+    border: #0c0d0d solid 0px;
+    width: 40px;
+height: 20px;
+
+position: relative;
+    bottom:-30px;
+    right:-90px;
+z-index:9999;
+font-family: 宋体;
+font-size: 0.5px;
+
+color: #000;
   }
